--- a/scripts/deployment.yaml
+++ b/scripts/deployment.yaml
@@ -20,7 +20,7 @@ spec:
             - name: PORT
               value: "8000"
             - name: DATABASE_URL
-              value: "postgresql://sit722_part2_1bo8_user:Y02GFVk6Eg6ATEpmdQyFMfJBBI7zgbKV@dpg-cr8kki2j1k6c73f43kv0-a.oregon-postgres.render.com/sit722_part2_1bo8"
+              value: "postgresql://library_user:2Da7XB27cV7ixTMR5srYjQ4UWl6YdZBp@dpg-crv06ae8ii6s738iu000-a.singapore-postgres.render.com/library_db_17wm"
           ports:
             - containerPort: 8000
 ---
